public/v/release-4.5/_sources/reference_workflows/isaac_for_manipulation/tutorials/tutorial_e2e.rst.txt
===================================================================================
Tutorial for Obstacle Avoidance and Object Following Using cuMotion with Perception
===================================================================================

Overview
--------

This tutorial walks through the process of planning trajectories for a real robot.
It leverages the cuMotion plugin for MoveIt 2 provided by :ir_repo:`Isaac ROS cuMotion <isaac_ros_cumotion>` on a Jetson AGX Thor.
This tutorial demonstrates obstacle-aware planning using cuMotion in two different scenarios. The first moves the robot end effector
between two predetermined poses, alternating between them while avoiding obstacles detected in the workspace. The second scenario
goes further by having the robot end effector follow an object at a fixed offset distance, also while avoiding obstacles. For pose
estimation, we provide the option to use either FoundationPose or Deep Object Pose Estimation (DOPE).

FoundationPose leverages a foundation model for object pose estimation and generalizes to
objects not seen during training.  It does, however, require either a segmentation mask or a 2D
bounding box for the object.  In this tutorial, RT-DETR is used to detect and return a 2D bounding box
for the object of interest.  If the SyntheticaDETR v1.0.0 model file is used, this object must be one of 27
household items for which the model was trained.

As an alternative, DOPE may be used to both detect the object and estimate the object's pose, so long
as a DOPE model has been trained for the object.  In most scenarios, poses returned by DOPE are
somewhat less accurate than those returned by FoundationPose, but DOPE incurs lower runtime overhead.
On Jetson AGX Thor, DOPE runs at up to 5 FPS, while the combination of RT-DETR and FoundationPose
more typically runs at approximately 1 FPS.

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/reference_workflows/isaac_for_manipulation/manipulator_object_following_workflow.png>`
   :width: 100%
   :align: center

   High-level architecture of the Isaac for Manipulation "object following" reference workflow

The pose-to-pose tutorial uses:

- Stereo cameras for perception
- :ir_repo:`Isaac ROS ESS <isaac_ros_dnn_stereo_depth> <isaac_ros_ess>` for depth estimation
- :ir_repo:`Isaac ROS Nvblox <isaac_ros_nvblox>` to produce a voxelized representation of the scene

The object-following tutorial uses the above and adds:

.. tabs::

   .. tab:: FoundationPose

      - :ir_repo:`Isaac ROS RT-DETR <isaac_ros_object_detection> <isaac_ros_rtdetr>` to detect an object of interest
      - :ir_repo:`Isaac ROS FoundationPose <isaac_ros_pose_estimation> <isaac_ros_foundationpose>` to estimate the 6 DoF pose of the desired object to approach
      - `Drop <https://github.com/ros-tooling/topic_tools/blob/:ir_ros_distro:/README.md#drop>`__ nodes to reduce the input frame rate for RT-DETR, in order to more closely match the achievable frame rate for FoundationPose and thus limit unnecessary system load.

   .. tab:: DOPE

      - :ir_repo:`Isaac ROS DOPE <isaac_ros_pose_estimation> <isaac_ros_dope>` to detect an object of interest and estimate its 6 DoF pose
      - `Drop <https://github.com/ros-tooling/topic_tools/blob/:ir_ros_distro:/README.md#drop>`__ nodes to reduce the input frame rate for DOPE, in order to limit GPU utilization and avoid starvation of cuMotion and nvblox.


For each tutorial, the following number of stereo cameras are supported:

.. list-table::
   :header-rows: 1

   * - Number of Cameras per Tutorial
     - RealSense

   * - Pose-to-pose
     - 2

   * - Object following
     - 2

Use of multiple cameras is recommended.
Multiple cameras can help reduce occlusion and noise in the scene and therefore increase the quality and completeness of the 3D reconstruction used for collision avoidance.
The object following tutorial with multiple cameras runs scene reconstruction for obstacle-aware planning on all cameras. Testing has been done with configurations of 2 RealSense cameras.

Object detection and pose estimation are only enabled on the camera with the lowest index.

Reflective or smooth, featureless surfaces in the environment may increase noise in the depth estimation.

Mixing different types has not been tested but may work with modifications to the launch files.

.. warning::

   The obstacle avoidance behavior demonstrated in this tutorial is not a safety function and does not
   comply with any national or international functional safety standards. When testing obstacle avoidance
   behavior, do not use human limbs or other living entities.

The examples use `RViz <https://github.com/ros2/rviz>`__ or `Foxglove <https://foxglove.dev>`__ for visualization.
RViz is the default visualization tool when Isaac for Manipulation is running on the same computer
that is displaying the visualization.
Foxglove is recommended when visualizing a reconstruction streamed from a remote machine.



Requirements
------------

The reference workflows have been tested on Jetson AGX Thor (128 GB).

Ensure that you have the following available:

- A manipulator supported by Isaac ROS Manipulation:

  .. tab-set::
     :sync-group: robot

     .. tab-item:: UR Robot
        :sync: ur5e

        A `Universal Robots <https://www.universal-robots.com/>`__ manipulator. This tutorial was validated on a UR5e and UR10e.

     .. tab-item:: Flexiv Robot
        :sync: flexiv

        A `Flexiv <https://www.flexiv.com/>`__ Rizon 4s manipulator with a Grav gripper (Flexiv-GN01).

- Two `RealSense cameras <https://www.realsenseai.com/>`__.

- One of the objects that :ir_ngc:`sdetr_grasp <teams/isaac/models/synthetica_detr>` or `DOPE <https://github.com/NVlabs/Deep_Object_Pose>`__ was trained on. In this tutorial, we are going to use the Mac and Cheese Box for FoundationPose and the Tomato Soup Can for DOPE.

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/reference_workflows/isaac_for_manipulation/soup_can.png>`
   :width: 234px
   :align: center
   :alt: Soup Can object

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/reference_workflows/isaac_for_manipulation/mac_and_cheese.png>`
   :width: 286px
   :align: center
   :alt: Mac and Cheese object


If you are using FoundationPose for an object, ensure that you have a mesh and a texture file available for it. To prepare an object, consult the FoundationPose documentation:

   :doc:`isaac_ros_foundationpose </repositories_and_packages/isaac_ros_pose_estimation/isaac_ros_foundationpose/index>`

Tutorial
--------

Set Up Development Environment
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

1. Set up your development environment by following the instructions in :doc:`getting started </getting_started/index>`.

2. Complete the :doc:`RealSense setup tutorial </getting_started/sensors/realsense_setup>` if using RealSense cameras.

3. It is recommended to use a PREEMPT_RT kernel on Jetson. Follow the :doc:`PREEMPT_RT for Jetson guide </getting_started/compute/preempt_setup>`
   **outside** of the container.

4. Follow the setup instructions in :doc:`Setup Hardware and Software for Real Robot </reference_workflows/isaac_for_manipulation/tutorials/setup/setup_with_gripper>`. Complete the tab corresponding to your robot (UR or Flexiv) in each step.

.. _run-launch-files:

Run Launch Files and Deploy to Robot
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

We recommend setting a ``ROS_DOMAIN_ID`` via ``export ROS_DOMAIN_ID=<ID_NUMBER>`` for every new terminal where you run ROS commands, to avoid interference with other computers on the same network (see `ROS Guide <https://docs.ros.org/en/:ir_ros_distro:/Concepts/Intermediate/About-Domain-ID.html>`__).

For real robot setups, Cyclone DDS is recommended as it provides more reliable real-time communication compared to the default middleware.

#. Install Cyclone DDS (one-time setup):

   .. code:: bash

      sudo apt-get install -y ros-:ir_ros_distro:-rmw-cyclonedds-cpp

#. Set the Cyclone DDS environment variable (required in **every** terminal):

   .. code:: bash

      export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp

#. Prepare the robot for remote control:

   .. tab-set::
      :sync-group: robot

      .. tab-item:: UR Robot
         :sync: ur5e

         On the UR teach pendant, ensure that the robot's **remote program** is loaded and that the robot is **paused** or **stopped** for safety purposes.

      .. tab-item:: Flexiv Robot
         :sync: flexiv

         Ensure the Flexiv robot is powered on and the emergency stop is released. Make sure that the robot is in ``Auto (Remote)`` mode.

#. Open a **new** terminal and activate the Isaac ROS environment:

   .. code:: bash

      isaac-ros activate

#. Set the Cyclone DDS environment variable:

   .. code:: bash

      export RMW_IMPLEMENTATION=rmw_cyclonedds_cpp

#. Source the ROS workspace:

   .. code:: bash

      cd ${ISAAC_ROS_WS} && \
         source install/setup.bash


#. Some important parameters for this workflow are documented in the :doc:`Manipulation Workflow Configuration Guide </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_bringup/manipulation_workflow_config_guide>` and the :ref:`Manipulator Configuration File section<robots/universal_robots/index:Create a Manipulator Configuration File>`.

   .. tab-set::
      :sync-group: robot

      .. tab-item:: UR Robot
         :sync: ur5e

         * ``gripper_type``: Type of the gripper `robotiq_2f_85` or `robotiq_2f_140`.
         * ``setup``: Setup of the robot; references camera calibration and sensor information.
         * ``robot_ip``: IP address of the robot.
         * ``moveit_collision_objects_scene_file``: Path to the MoveIt collision objects scene file used by cuMotion for static obstacles.
         * ``cumotion_urdf_file_path``: Path to the cuMotion URDF file.
         * ``cumotion_xrdf_file_path``: Path to the cuMotion XRDF file.
         * ``workflow_type``: ``OBJECT_FOLLOWING`` or ``POSE_TO_POSE`` for this tutorial.
         * ``ur_type``: ``ur5e`` or ``ur10e``.

      .. tab-item:: Flexiv Robot
         :sync: flexiv

         * ``gripper_type``: ``grav`` for the Flexiv Grav gripper.
         * ``setup``: Setup of the robot; references camera calibration and sensor information.
         * ``robot_sn``: Flexiv robot serial number (for example, ``Rizon4s-062839``).
         * ``rizon_type``: ``Rizon4s``.
         * ``load_gripper``: ``'true'`` to initialize the Grav gripper at driver startup.
         * ``moveit_collision_objects_scene_file``: Path to the MoveIt collision objects scene file used by cuMotion for static obstacles.
         * ``cumotion_urdf_file_path``: Path to the cuMotion URDF file.
         * ``cumotion_xrdf_file_path``: Path to the cuMotion XRDF file.
         * ``workflow_type``: ``OBJECT_FOLLOWING`` or ``POSE_TO_POSE`` for this tutorial.
         * ``nvblox_global_frame``: ``world`` for Flexiv (UR setups typically use ``base_link``).

#. Launch the desired Isaac for Manipulation example:

   The ``cumotion_xrdf_file_path`` corresponds to the ``robot`` parameter found :ref:`here <repositories_and_packages/isaac_ros_cumotion/isaac_ros_cumotion/index:API>`.

   .. tab-set::
      :sync-group: robot

      .. tab-item:: UR5e
         :sync: ur5e

         This tutorial has been tested with UR5e and UR10e robots. For the **object following** and **pose-to-pose**
         workflows covered in this tutorial, use the vanilla robot description files (without a tool) for cuMotion.
         These files can be found in the ``share`` directory of the ``isaac_ros_cumotion_robot_description`` package.

         Set the ``cumotion_urdf_file_path`` and ``cumotion_xrdf_file_path`` parameters in your
         :ref:`manipulator configuration file <robots/universal_robots/index:Create a Manipulator Configuration File>`
         to point to the vanilla robot files for your robot type.

         .. code-block:: yaml

            cumotion_urdf_file_path: $(ros2 pkg prefix --share isaac_ros_cumotion_robot_description)/urdf/ur5e.urdf
            cumotion_xrdf_file_path: $(ros2 pkg prefix --share isaac_ros_cumotion_robot_description)/xrdf/ur5e.xrdf

      .. tab-item:: UR10e
         :sync: ur10e

         This tutorial has been tested with UR5e and UR10e robots. For the **object following** and **pose-to-pose**
         workflows covered in this tutorial, use the vanilla robot description files (without a tool) for cuMotion.
         These files can be found in the ``share`` directory of the ``isaac_ros_cumotion_robot_description`` package.

         Set the ``cumotion_urdf_file_path`` and ``cumotion_xrdf_file_path`` parameters in your
         :ref:`manipulator configuration file <robots/universal_robots/index:Create a Manipulator Configuration File>`
         to point to the vanilla robot files for your robot type.

         .. code-block:: yaml

            cumotion_urdf_file_path: $(ros2 pkg prefix --share isaac_ros_cumotion_robot_description)/urdf/ur10e.urdf
            cumotion_xrdf_file_path: $(ros2 pkg prefix --share isaac_ros_cumotion_robot_description)/xrdf/ur10e.xrdf

      .. tab-item:: Flexiv Robot
         :sync: flexiv

         .. code-block:: yaml

            cumotion_urdf_file_path: $(ros2 pkg prefix --share isaac_ros_cumotion_robot_description)/urdf/flexiv_rizon4s_grav.urdf
            cumotion_xrdf_file_path: $(ros2 pkg prefix --share isaac_ros_cumotion_robot_description)/xrdf/flexiv_rizon4s_grav.xrdf
            nvblox_global_frame: 'world'


   To launch the example without robot arm control, that is, with perception only, you can add the ``no_robot_mode:=True`` flag to any of the launch commands below.

   .. tabs::
      .. tab:: Object following using an object detection model

         #. Change the ``workflow_type`` to ``OBJECT_FOLLOWING`` and ``segmentation_type`` to ``NONE`` in the manipulator configuration file.

         #. Modify the ``object_detection_type`` and ``pose_estimation_type`` parameters in the manipulator configuration file based on the desired models.

            The following table shows the supported combinations of object detection, segmentation, and pose estimation models for the Object Following workflow:

            .. include:: tables/object_following_support.rst

            .. note::

               When using the ``GROUNDING_DINO`` object detection model, set the parameters of ``grounding_dino_*`` correctly in the :ref:`Manipulator Configuration File section<robots/universal_robots/index:Create a Manipulator Configuration File>`. You will need to set a text prompt as the model takes in a text query as input (due to it's grounding in the language modality).

         #. Launch the object following example:

            .. tabs::
               .. tab:: RealSense

                  .. code:: bash

                     ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
                        manipulator_workflow_config:=<WORKFLOW_CONFIG_FILE_PATH>

            The ``manipulator_workflow_config`` parameter points to the manipulator configuration file. Refer to the section on how to :ref:`Create Manipulator Configuration File <robots/universal_robots/index:Create a Manipulator Configuration File>`.
            The robot end effector will move to match the pose of the object at a fixed offset. If that pose would bring the robot into collision (for example, with a table surface), cuMotion will report a planning failure and the robot will remain stationary until the object is repositioned.

         .. note::

            When using the DOPE model, the ``Pose Estimate`` tab in RViz must be set to ``detections`` to see the pose estimation results in the 3D viewport.

      .. tab:: Object following using SAM as the object detection backend

         #. Change the ``workflow_type`` to ``OBJECT_FOLLOWING`` in the manipulator configuration file.

         #. Modify the ``object_detection_type``, ``segmentation_type``, and ``pose_estimation_type`` parameters in the manipulator configuration file based on the desired models.

            The following table shows the supported combinations of object detection, segmentation, and pose estimation models for the Object Following workflow:

            .. include:: tables/object_following_support.rst

         #. Launch the object following example:

            .. tabs::
               .. tab:: RealSense

                  .. code:: bash

                     ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
                        manipulator_workflow_config:=<WORKFLOW_CONFIG_FILE_PATH>

            The ``manipulator_workflow_config`` parameter points to the manipulator configuration file. Refer to the section on how to :ref:`Create Manipulator Configuration File <robots/universal_robots/index:Create a Manipulator Configuration File>`.
            The robot end effector will move to match the pose of the object at a fixed offset. If that pose would bring the robot into collision (for example, with a table surface), cuMotion will report a planning failure and the robot will remain stationary until the object is repositioned.

         #. Once the ``rqt_image_view`` window opens, modify the location topic to ``/segment_anything/input_points`` for SAM1 or ``/segment_anything2/input_points`` for SAM2, and click on the desired object to follow. This location topic corresponds to the ``segment_anything_input_points_topic`` parameter in the manipulator configuration file.

      .. tab:: Pose-to-pose workflow

         #. Change the ``workflow_type`` to ``POSE_TO_POSE`` in the manipulator configuration file before launching this file.

            .. tabs::

               .. tab:: RealSense

                  .. code:: bash

                     ros2 launch isaac_ros_manipulation_bringup workflows.launch.py \
                     manipulator_workflow_config:=<WORKFLOW_CONFIG_FILE_PATH>

            The ``manipulator_workflow_config`` parameter points to the manipulator configuration file. Refer to the section on how to :ref:`Create Manipulator Configuration File <robots/universal_robots/index:Create a Manipulator Configuration File>`.

   .. note::

      Sometimes the robot might fail to plan a trajectory. This could be due to ghost voxels in the scene being added due to poor depth estimation. To experiment with better depth estimation, please try the ``ESS_FULL``, ``ESS_LIGHT``, ``FOUNDATION_STEREO_LOW_RES``, or ``FOUNDATION_STEREO_HIGH_RES`` models by changing the ``depth_type`` and ``enable_dnn_depth_in_realsense`` parameters in the manipulator configuration file.
      In the Object Following workflow with RealSense and ``FOUNDATION_POSE``, DNN depth is used for scene reconstruction and collision avoidance. The live FoundationPose pose-estimation path, including the Grounding DINO and Segment Anything path, continues to use native aligned RealSense depth so that RGB, depth, and segmentation messages remain timestamp-compatible.


#. Enable the robot controller:

   .. tab-set::
      :sync-group: robot

      .. tab-item:: UR Robot
         :sync: ur5e

         On the UR teach pendant, press **play** to enable the robot.

      .. tab-item:: Flexiv Robot
         :sync: flexiv

         The Flexiv controller is activated automatically by the driver. No manual step is needed.

   .. warning::

         To prevent potential collisions, ensure that all obstacles are either fully in view of the camera or are added manually
         to the MoveIt planning scene.  In MoveIt's RViz interface, obstacles may be added in the "Scene Objects" tab, as described
         in the :doc:`Quickstart </repositories_and_packages/isaac_ros_cumotion/isaac_ros_cumotion_moveit/index>`.

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/reference_workflows/isaac_for_manipulation/ur5e_pose_to_pose.gif>`
   :width: 576px
   :align: center

   "Pose-to-pose" example with obstacle avoidance via cuMotion and nvblox on a UR5e robot.

For additional details about the launch files, consult the
:doc:`documentation </reference_workflows/isaac_for_manipulation/packages/isaac_ros_manipulation_bringup/index>`
for the ``isaac_ros_manipulation_bringup`` package.

Visualizing in Foxglove
~~~~~~~~~~~~~~~~~~~~~~~

To visualize a reconstruction streamed from a remote machine, for example a robot, we recommend using
`Foxglove <https://foxglove.dev/>`__.

   * When running Isaac for Manipulation on Jetson AGX Thor, it is recommended to display the visualization on a remote machine instead of on the Jetson directly. This will free up compute resources for the Isaac for Manipulation pipeline.

   * When visualizing from a remote machine over WiFi, bandwidth is limited and easily exceeded. Exceeding this bandwidth can lead to poor visualization results. For best results we recommend visualizing a limited number of topics, and to avoiding visualizing high-bandwidth topics for example images.


To visualize with Foxglove, complete the following steps on your remote visualization machine:

#. Complete the :ref:`Foxglove setup <foxglove-setup>` guide.

#. For the RealSense pose-to-pose tutorial, see the
   :ir_repo:`realsense_foxglove.json <isaac_ros_manipulation> <isaac_ros_manipulation_bringup/config/visualization/realsense_foxglove.json>`
   Foxglove layout configuration as an example.

#. Launch any Isaac for Manipulation tutorial with the commands shown :ref:`here <run-launch-files>`
   and append the ``run_foxglove:=True`` flag.

Troubleshooting
---------------

Graph crashes on startup when Nvblox is enabled on Thor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Symptom
^^^^^^^

When launching the graph on a Jetson Thor with ``enable_nvblox`` set to ``true``,
the graph can exit during startup due to a ``yaml-cpp`` compatibility error:

.. code:: bash

   [INFO] [launch_ros.actions.load_composable_nodes]: Loaded node '/resize_mask_node' in container 'manipulator_container'
   [INFO] [launch_ros.actions.load_composable_nodes]: Loaded node '/detection2_d_array_filter' in container 'manipulator_container'
   [INFO] [launch_ros.actions.load_composable_nodes]: Loaded node '/rtdetr_drop_node' in container 'manipulator_container'
   [ERROR] [component_container_mt-3]: process has died [pid 1628674, exit code -11, cmd '/opt/ros/jazzy/lib/rclcpp_components/component_container_mt --ros-args --log-level error --ros-args -r __node:=manipulator_container --params-file /tmp/launch_params_3ismexij'].
   [INFO] [launch]: process[component_container_mt-3] was required: shutting down launched system

Solution
^^^^^^^^

Ensure the right version of ``yaml-cpp`` is used by setting ``LD_PRELOAD`` in the same terminal that launches the workflow:

.. code:: bash

   export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libyaml-cpp.so.0.8

Then relaunch the workflow from that same terminal. Be sure to set this environment variable again before launching the workflow in any other terminal.
